deployments/resources/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  revisionHistoryLimit: 5
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: 349142834852.dkr.ecr.us-east-2.amazonaws.com/projector-frontend:763e68914a71f4fed86aafab65f49f1a780da28a
          resources:
            requests:
              cpu: 100m
              memory: 500Mi
---
apiVersion: v1
kind: Service
metadata:
    name: frontend-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        app: frontend
    ports:
     -   port: 3000
         targetPort: 3000
